# corporate-backend

./: .gitignore
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02ab39de9059_add_role_templates_and_assignments.py  0901842b1bdf_initial_auth_tables.py  0ad89d1cfb3a_add_booking_tables.py  4eba7dfdd594_enhance_booking_lifecycle.py  5e6303bfd9e0_add_booking_start_date_and_travel_class.py  92a7059a3c34_add_approvals_and_manager.py  9842ba5173f0_initial_auth_tables_retry.py  a2368e19bab5_add_core_corporate_travel_fields.py  b6a6ad1633b1_refactor_auth_to_sso_scim.py  c5b4cfd947fc_add_scim_tokens_table.py  c7aecb5836d4_add_audit_logs.py  eac31eaee70b_fix_policy_status_enum_case.py  fdd3ef1ac2cd_add_delegation_table_for_ea_booking_.py
backend/app/: main.py
backend/app/api/: auth_deps.py  deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: approvals.py  auth.py  bookings.py  destinations.py  health.py  roles.py  scim.py  search.py  trains.py  transfers.py
backend/app/core/: access_control.py  config.py  permissions.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  approval.py  audit.py  booking.py  delegation.py  employee.py  organization.py  role_template.py  scim_token.py
backend/app/schemas/: approval.py  auth.py  booking.py  common.py  destination.py  policy.py  role.py  scim.py  search.py  train.py  transfer.py
backend/app/services/: audit_service.py  auth_service.py  booking_service.py  booking_workflow.py  cache_service.py  notification_service.py  policy_engine.py  redis_client.py  search_service.py  token_blacklist.py  transfer_service.py
backend/app/services/suppliers/: __init__.py  airport_transfer_client.py  allaboard_client.py  destination_data.py  mock_flight_client.py  mock_hotel_client.py  mock_transfer_client.py
backend/scripts/: seed_roles.py  setup_test_db.py
docs/: ARCHITECTURE.md  DATA_FLOW.md  INDEX.md  QUICK_START.md  README.md  SEQUENCE_DIAGRAMS.md  SERVICE_ARCHITECTURE.md  core_logic_clarification.md
